--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "CHOKIDAR_USEPOLLING=true  next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -13,8 +13,9 @@
     "prismaMigrateLocalNoSeed": "dotenv -e .env.local -- npx prisma migrate dev --skip-seed"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.1",
+    "@apollo/client": "^3.7.17",
     "@headlessui/react": "1.7.15",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@prisma/client": "^4.14.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -23,8 +24,8 @@
     "clsx": "1.2.1",
     "eslint-config-next": "13.4.2",
     "framer-motion": "10.12.16",
-    "graphql": "16.6.0",
-    "graphql-yoga": "3.9.1",
+    "graphql": "^16.6.0",
+    "graphql-yoga": "^4.0.3",
     "lodash": "^4.17.21",
     "next": "13.4.2",
     "next-auth": "^4.22.1",
