--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.17",
     "@headlessui/react": "1.7.15",
-    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.14.0",
     "@types/react": "18.2.6",
     "@types/react-dom": "18.2.4",
@@ -29,7 +29,6 @@
     "graphql-yoga": "^4.0.3",
     "lodash": "^4.17.21",
     "next": "13.4.2",
-    "next-auth": "^4.22.1",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
