fix enviroment variables use

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "prismaGenerate": "dotenv -e .env.local -- npx prisma generate",
     "prismaMigrateLocalNoSeed": "dotenv -e .env.local -- npx prisma migrate dev --skip-seed",
     "prismaDBSeed": "dotenv -e .env.local -- npx prisma db seed",
-    "prismaDBReset": "dotenv -e .env.local -- npx prisma db push --force-reset && dotenv -e .env.local -- npx prisma db seed"
+    "prismaDBReset": "dotenv -e .env.local -- npx prisma db push --force-reset && dotenv -e .env.local -- npx prisma db seed",
+    "prismaStudio": "dotenv -e .env.local -- npx prisma studio"
   },
   "dependencies": {
     "@apollo/client": "^3.7.17",
