--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "prismaMigrateLocalNoSeed": "dotenv -e .env.local -- npx prisma migrate dev --skip-seed",
     "prismaDBSeed": "dotenv -e .env.local -- npx prisma db seed",
     "prismaDBReset": "dotenv -e .env.local -- npx prisma db push --force-reset && dotenv -e .env.local -- npx prisma db seed",
-    "prismaStudio": "dotenv -e .env.local -- npx prisma studio"
+    "prismaStudio": "dotenv -e .env.local -- npx prisma studio",
+    "vercelBuildReset": "npx prisma migrate reset --force && npx prisma generate && next build",
+    "vercelBuild": "npx prisma generate && npx migrate dev && next build"
   },
   "dependencies": {
     "@apollo/client": "^3.7.17",
