--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@apollo/client": "^3.7.17",
     "@headlessui/react": "1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^4.14.0",
     "@types/react": "18.2.6",
