--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "@types/react-dom": "18.2.4",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
-    "chart.js": "^4.3.3",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "10.12.16",
     "graphql": "^16.6.0",
